reply analysis